package UI;

public interface AnimationEditorWindow extends EditorWindow {
    
}
